--- a/src/Bookshop/AdminBundle/Resources/views/ProductAdmin/index.html.twig
+++ b/src/Bookshop/AdminBundle/Resources/views/ProductAdmin/index.html.twig
@@ -54,7 +54,7 @@
                             <th>&nbsp;</th>
                             <td valign="top">
                                 <input type="submit" value="" class="form-submit" />
-                        <a href="{{ path('bookshop_admin_product_list') }}"><butoon type="button" value="" class="form-reset"></butoon></a>
+                        <a href="{{ path('bookshop_admin_product_list') }}"><button type="button" value="" class="form-reset"></button></a>
                             </td>
                             <td></td>
                         </tr>
