--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,6 +16,7 @@
                 <div class="header-container">
                     <div class="header">
                         <div class="quick-access">
+                            {{ locale_switcher() }}
                             <form id="search_mini_form" action="product_list.html" method="get">
                                 <div class="form-search">
                                     <label for="search">Search:</label>
