--- a/src/Bookshop/BookshopBundle/Resources/views/Cart/index.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Cart/index.html.twig
@@ -6,12 +6,12 @@
         <div class="summary">
             <p class="amount">There are <a href="{{path('mycart')}}">{{ items|length }} items</a> in your cart.</p>
             <p class="subtotal">
-                <span class="label">Cart Subtotal:</span> <span class="price">{{ cart.total }} US$</span>
+                <span class="label">Cart Subtotal:</span> <span class="price">{{ cart.total }} US$</span>
             </p>
         </div>
 
         <div class="actions">
-            <button type="button" title="Checkout" class="button" ><span><span>Checkout</span></span></button>
+            <button type="button" title="Checkout" onclick=" window.location.href = '{{ path('checkout') }}'" class="button" ><span><span>Checkout</span></span></button>
         </div>
 
         <p class="block-subtitle">Recently added item(s)</p>
@@ -28,7 +28,7 @@
                         <a href="{{path('mycart')}}" title="Edit item" class="btn-edit">Edit item</a>
                         <p class="product-name"><a href="{{path('product',{'id':items[i].productId.id})}}">{{items[i].title}}</a></p>
                         <strong>{{items[i].quantity}}</strong> x
-                        <span class="price">{{items[i].productId.price}} US$</span>
+                        <span class="price">{{items[i].productId.price}} US$</span>
                     </div>
                 </li>
                 {% endif %}
