checkout payment & bugs on checkout

--- a/src/Bookshop/BookshopBundle/Resources/views/Checkout/payment.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Checkout/payment.html.twig
@@ -1,1 +1,48 @@
-{# empty Twig template #}
+{% extends "BookshopBookshopBundle::layout.html.twig" %}
+
+
+{% block collayout %}
+<div class="main-container col2-right-layout">
+    <div class="main">
+        <div class="col-main">
+            {% block body %}
+                <div class="page-title">
+                    <h1>Checkout</h1>
+                </div>
+                <ol class="opc" id="checkoutSteps">
+                    <li id="opc-shipping_method" class="section slide4 allow active">
+                        <div class="step-title">
+                            <span class="number">4</span>
+                            <h2>Payment Information</h2>
+                            <a href="#">Edit</a>
+                        </div>
+                        <div id="checkout-step-payment" class="step a-item">
+                            <form id="co-payment-form" action="{{path('payment')}}" method="POST">
+                                <fieldset>
+                                    <dl class="sp-methods" id="checkout-payment-method-load">
+                                    {% for child in form.payment %}
+                                            <dt>
+                                        {{ form_widget(child) }}
+                                        {{ form_label(child) }}
+                                            </dt>
+                                    {% endfor %}
+                                        </dl>
+                                    {{ form_rest(form) }}
+                                    </fieldset>
+
+                                    <div class="buttons-set" id="payment-buttons-container">
+                                        <p class="required">* Required Fields</p>
+                                        <p class="back-link"><a href="{{path('shipping_method')}}" ><small>« </small>Back</a></p>
+                                        <button type="submit" class="button"><span><span>Continue</span></span></button>
+                                    </div>
+                                </form>
+                            </div>
+                        </li>
+                    </ol>
+            {% endblock %}
+                </div>
+        {% block leftsidebar %}{% endblock %}
+        {% block rightsidebar%}{% endblock %}
+            </div>
+        </div>
+{% endblock %}
