Refactoring Category Controller & Search Controller

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
                     <div class="header">
                         <div class="quick-access">
                             {{ locale_switcher() }}
-                            <form id="search_mini_form" action="product_list.html" method="get">
+                            <form id="search_mini_form" action="{{path('search')}}" method="get">
                                 <div class="form-search">
                                     <label for="search">Search:</label>
                                     <input id="search" type="text" name="q" value="" class="input-text" maxlength="128" />
