--- a/src/Bookshop/BookshopBundle/Resources/views/Dashboard/orders.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Dashboard/orders.html.twig
@@ -25,31 +25,35 @@
             </tr>
         </thead>
         <tbody>
-                    {% if orders|length > 0 %}
-                    {% for order in orders %}
+            {% if orders|length > 0 %}
+                {% for order in orders %}
+                    {% if loop.index is odd %}
                 <tr class="first last odd">
-                    <td>{{"%1$08d"|format(order.id)}}</td>
-                    <td><span class="nobr">{{order.date|date('Y-m-d')}}</span></td>
-                    <td>{{order.shippingAddress.firstName}} {{order.shippingAddress.lastName}}</td>
-                    <td><span class="price">{{order.total|number_format(2,".",",")}}</span></td>
-                    <td><em>{{order.state.name}}</em></td>
-                    <td class="a-center last">
-                        <span class="nobr">
-                            <form method="post" action="{{path('dashboard_vieworder')}}">
-                                <input type="hidden" value="{{order.id}}" name="id">
-                                <button class="link" >View Order</button>
-                            </form>
-                        </span>
-                    </td>
-                </tr>
+                    {% else %}
+                    <tr class="first last even">
+                    {% endif %}
+                            <td>{{"%1$08d"|format(order.id)}}</td>
+                            <td><span class="nobr">{{order.date|date('Y-m-d')}}</span></td>
+                            <td>{{order.shippingAddress.firstName}} {{order.shippingAddress.lastName}}</td>
+                            <td><span class="price">{{order.total|number_format(2,".",",")}}</span></td>
+                            <td><em>{{order.state.name}}</em></td>
+                            <td class="a-center last">
+                                <span class="nobr">
+                                    <form method="post" action="{{path('dashboard_vieworder')}}">
+                                        <input type="hidden" value="{{order.id}}" name="id">
+                                        <button class="link" >View Order</button>
+                                    </form>
+                                </span>
+                            </td>
+                        </tr>
                     {% endfor %}
                     {% endif %}
-            </tbody>
-        </table>
-        <div class="box-head">
+                    </tbody>
+                </table>
+                <div class="box-head">
                 {{ knp_pagination_render(orders) }}
-            </div>
-        </div>
+                    </div>
+                </div>
 
 
 
