--- a/src/Bookshop/BookshopBundle/Resources/views/Checkout/orderDetails.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Checkout/orderDetails.html.twig
@@ -97,14 +97,20 @@
                                         {{order.payment.name}}                                        
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <br/>
+                                        <h3> State: </h3>
+                                        Your order is in '{{order.state.name}}' state.
+                                    </td>
+                                </tr>
                             </table>
                             <br/>
                             <br/>
                             </div>
 
                             <div class="buttons-set" id="payment-buttons-container">
-                                <p class="back-link"><a href="{{path('cancel')}}" ><small>« </small>Cancel</a></p>
-                                <a href="{{path('place_order')}}"><button type="button" class="button"><span><span>Place order</span></span></button></a>
+                                <a href="{{path('cancel')}}"><button type="button" class="button"><span><span>Cancel</span></span></button></a>
                             </div>
                         </div>
                     </li>
