admin "add user" capability

--- a/src/Bookshop/AdminBundle/Resources/views/UserAdmin/new.html.twig
+++ b/src/Bookshop/AdminBundle/Resources/views/UserAdmin/new.html.twig
@@ -1,6 +1,6 @@
 {% extends "BookshopAdminBundle::layout.html.twig" %}
 {% block body%}
-<div id="page-heading"><h1>Edit user</h1></div>
+<div id="page-heading"><h1>Add user</h1></div>
 
 {% if form_errors(form) %}
 <!--  start message-red -->
@@ -15,5 +15,5 @@
 <!--  end message-red -->
 
 {% endif %}
-{% include 'BookshopAdminBundle:UserAdmin:editForm.html.twig' with { 'form': form, 'userID': userID } %}
+{% include 'BookshopAdminBundle:UserAdmin:newForm.html.twig' with { 'form': form } %}
 {% endblock %}
